--- a/src/app/pages/explorar/explorar.page.html
+++ b/src/app/pages/explorar/explorar.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>PROYECTO HEROES Y VILLANOS</ion-title>
+    <ion-title>HEROES Y VILLANOS</ion-title>
   </ion-toolbar>
 </ion-header>
 
