--- a/src/app/pages/favs/favs.page.html
+++ b/src/app/pages/favs/favs.page.html
@@ -44,7 +44,7 @@
   <div *ngIf="!cargando && favoritos.length === 0" class="vacio">
     <p>No hay favoritos</p>
     <p>Agrega personajes desde la página principal</p>
-    <ion-button [routerLink]="['/tabs/inicio']" color="success" class="boton-cuadrado">
+    <ion-button [routerLink]="['/tabs/explorar']" color="success" class="boton-cuadrado">
   Ir a Inicio
 </ion-button>
   </div>
