--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -3,17 +3,17 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="explorar">
       <ion-icon name="search"></ion-icon>
-      <ion-label>Explorar</ion-label>
+      <ion-label>Menu</ion-label>
     </ion-tab-button>
     
     <ion-tab-button tab="favs">
-      <ion-icon name="heart"></ion-icon>
-      <ion-label>Favoritos</ion-label>
+      <ion-icon name="star"></ion-icon>
+      <ion-label>Favs</ion-label>
     </ion-tab-button>
     
     <ion-tab-button tab="config">
       <ion-icon name="settings"></ion-icon>
-      <ion-label>Configuración</ion-label>
+      <ion-label>Ajustes</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
